--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+
+.center{
+  width: 50%;
+  margin: 1em auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
